--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,35 @@ spring:
   main:
     banner-mode: off
 
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:8081}
+  polling-timeout: 10000
+  producer:
+    client-id: ${KAFKA_CLIENT_ID:rehtang-app}
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    order:
+      name: queuing.generated_project_for_tests.order
+      enabled: true
+      '[key.serializer]': org.apache.kafka.common.serialization.StringSerializer
+      '[value.serializer]': ru.rehtang.kafka.producer.AllInOneSerializer
+
+cryptocurrency-alert-app:
+    transport:
+        topics:
+          news: ${BOT_TOPIC:demo-topic}
+
+server:
+  port: 8081
+
 feign:
   huobi:
     url: "https://api.huobi.pro/market/trade"
     apiKey: "7204631f-7656921f-aad51ca2-b1rkuf4drg"
   bybit:
-    url: "https://api-testnet.bybit.com/v2/public/mark-price-kline"
+    url: "https://api-testnet.bybit.com//public/linear/index-price-kline"
   messari:
     url: "https://data.messari.io/api/v1/assets/"
+
+telegram:
+  token: "5674163812:AAFPt0F47QD6p2DquIYTufJ4Z3kZX29z-Q0"
+  username: "RehtangCryptocurrencyAlertBot"
