--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ replay_pid*
 ### Gradle ###
 .gradle
 **/build/
-!src/**/build/
+!web/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
